# swiss-ai-weeks-finnova-banking-client-simulation

./: .gitignore  README.md  hello.py  pyproject.toml
demo/: USAGE_GUIDE.md  analyze_demographics.py  data.json  demographic_prompt_enhancement.md  generate_large_dataset.py  generate_personas.py  persona_lifecycle.py  persona_visualizer_app.py  prompt.py  pyproject.toml  streamlit.py
demo/prompts/: demo.md  enhanced_demo.md
persona-generator/: README.md  batch_chat.py  batch_generation.py  data.py  debug_llm.py  demo_chat.py  llm.py  main_app.py  persona_chat.py  persona_library.py  prompt.md  pyproject.toml  simple_app.py  single_persona.py  streamlit_app.py  system.md  test_batch_chat.py  test_improvements.py  test_parallel.py  ui_components.py
